# llm-from-scratch

./: .gitignore  BLOG_NOTES.md  README.md  VERIFY.md  dataset.py  main.py  pyproject.toml  tokenizers.py
blog-assets/: README.md
book_llm/: __init__.py  attention.py  datasets.py  generation.py  gpt2_weights.py  model.py  ollama_eval.py  plotting.py  tokenization.py  training.py
scripts/: _bootstrap.py  ch02_tokenization.py  ch06_spam_classifier.py  ch07_instruction_tuning.py  ch07_ollama_eval.py  smoke_refactor.py  verify.py
tests/: test_datasets.py  test_generation.py  test_gpt2_weights.py  test_model.py  test_training.py
walkthroughs/: full_book_walkthrough.py
