[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "book-llm"
version = "0.1.0"
description = "Working through 'Build an LLM from Scratch'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "psutil",
    "tensorflow",
    "torch",
    "tiktoken",
    "tqdm",
]

[tool.setuptools]
packages = ["book_llm"]
py-modules = ["dataset", "tokenizers"]
